--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h2 class="h2_menu"><a href="https://github.com/kleprer/lab1" target="_blank" class="a_menu" >Лабораторная №1</a></h2>
                 <h2 class="h2_menu"><a href="https://github.com/kleprer/MyApp" target="_blank" class="a_menu">Лабораторная №2</a></h2>
                 <h2 class="h2_menu"><a href="https://github.com/kleprer/WeatherApp" target="_blank" class="a_menu">Лабораторная №3</a></h2>
-                <h2 class="h2_menu"><a href="https://github.com/kleprer/CV" target="_blank" class="a_menu">Лабораторная №4</a></h2>
+                <h2 class="h2_menu"><a href="https://kleprer.github.io/CV/" target="_blank" class="a_menu">Лабораторная №4</a></h2>
             </div>
         </div>
     </div>
